# uniffi_025_repro

./: Cargo.toml  build.sh
crates/inner/: Cargo.toml  uniffi.toml
crates/inner/src/: lib.rs
crates/outer/: Cargo.toml  uniffi.toml
crates/outer/src/: lib.rs
kotlin/app/: build.gradle
kotlin/app/src/main/java/com/example/inner/: inner.kt
kotlin/app/src/main/java/com/example/myapplication/: MainActivity.kt
kotlin/app/src/main/java/com/example/outer/: outer.kt
kotlin/gradle/wrapper/: gradle-wrapper.properties
